GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Credit_Note_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_URL__c</fullName>
    <formula>&#39;https://www.eurostar.com/customer-dashboard/&#39; +
 IF( ISPICKVAL( Invoice__r.Member__r.Preferred_Language__pc , &#39;English (UK)&#39;) , &#39;en&#39;, 
 IF(ISPICKVAL( Invoice__r.Member__r.Preferred_Language__pc , &#39;French&#39;), &#39;fr&#39;, 
 IF(ISPICKVAL( Invoice__r.Member__r.Preferred_Language__pc , &#39;Dutch&#39;), &#39;nl&#39;, 
 IF(ISPICKVAL( Invoice__r.Member__r.Preferred_Language__pc , &#39;German&#39;), &#39;de&#39;, &#39;en&#39;) ) ) ) +
&#39;/subscriptions/view-invoice?&#39; +
&#39;type=creditnote&amp;&#39; + 
&#39;orderNumber=&#39; +  Invoice__r.Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note URL</label>
    <type>Text</type>
</CustomField>