GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>