GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_CLI_FactSociete__c.field-meta.xml
<CustomField>
    <fullName>Navision_CLI_FactSociete__c</fullName>
    <formula>IF (Invoice_Account__c = NULL, Invoice__r.Invoice_Last_Name__c &amp;&quot; &quot;&amp; Invoice__r.Invoice_First_Name__c , Invoice_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLI_FactSociete</label>
    <type>Text</type>
</CustomField>