GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_CLI_TVA__c.field-meta.xml
<CustomField>
    <fullName>Navision_CLI_TVA__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(Invoice__r.Subscription_VAT_Number__c),
        ISNULL(Invoice__r.Subscription_VAT_Number__c)
    ),
    &quot;NA&quot;,
    UPPER(Invoice__r.Subscription_VAT_Number__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLI_TVA</label>
    <type>Text</type>
</CustomField>