GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_Client__c.field-meta.xml
<CustomField>
    <fullName>Navision_Client__c</fullName>
    <formula>if(Navision_CLI_FactSociete__c != &#39;&#39;,Navision_CLI_FactSociete__c,Invoice__r.Invoice_Last_Name__c &amp; &quot; &quot; &amp; Invoice__r.Invoice_First_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Text</type>
</CustomField>