GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_D_DVALIDITE__c.field-meta.xml
<CustomField>
    <fullName>Navision_D_DVALIDITE__c</fullName>
    <formula>TEXT(YEAR(Subscription__r.Start_Date__c)) &amp; &quot;-&quot; &amp; IF(MONTH(Subscription__r.Start_Date__c) &lt; 10,&quot;0&quot;, &quot;&quot;) &amp; TEXT(MONTH(Subscription__r.Start_Date__c)) &amp; &quot;-&quot; &amp;IF(DAY(Subscription__r.Start_Date__c) &lt; 10,&quot;0&quot;, &quot;&quot;) &amp; TEXT(DAY(Subscription__r.Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D_DVALIDITE</label>
    <type>Text</type>
</CustomField>