GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_Montant_HTVA__c.field-meta.xml
<CustomField>
    <fullName>Navision_Montant_HTVA__c</fullName>
    <formula>SUBSTITUTE(TEXT(ROUND(Total_Amount_excl_VAT__c,2)), &quot;.&quot;, &quot;,&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant HTVA</label>
    <type>Text</type>
</CustomField>