GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_Motif_Compta__c.field-meta.xml
<CustomField>
    <fullName>Navision_Motif_Compta__c</fullName>
    <formula>TEXT(Invoice__r.Cancellation_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motif Compta</label>
    <type>Text</type>
</CustomField>