GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Navision_N_Note_credit__c.field-meta.xml
<CustomField>
    <fullName>Navision_N_Note_credit__c</fullName>
    <formula>Credit_Note_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_Note_credit</label>
    <type>Text</type>
</CustomField>