GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirmed;</fullName>
                <isActive>false</isActive>
                <label>Confirmed;</label>
            </value>
            <value>
                <fullName>New;</fullName>
                <isActive>false</isActive>
                <label>New;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>