GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/TECH_To_Be_Send_To_Svoc__c.field-meta.xml
<CustomField>
    <fullName>TECH_To_Be_Send_To_Svoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH To Be Send To Svoc</label>
    <type>Checkbox</type>
</CustomField>