GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/Total_Amount_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_excl_VAT__c</fullName>
    <formula>Invoice__r.Total_Amount_excl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (excl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>