GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>Invoice__r.VAT__c</description>
    <formula>Invoice__r.VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>