GearsetPOC/force-app/main/default/objects/Credit_Note__c/fields/VAT_Applied__c.field-meta.xml
<CustomField>
    <fullName>VAT_Applied__c</fullName>
    <formula>IF (Invoice__r.VAT__c = 0, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Applied</label>
    <type>Checkbox</type>
</CustomField>