GearsetPOC/force-app/main/default/objects/Credit_Note__c/validationRules/Prevent_edit_when_Credit_Number_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_edit_when_Credit_Number_filled</fullName>
    <active>true</active>
    <description>When the Credit_Note_Number__c is populated

Then edits by a User in the User Interface should be prevented. 

AND The Subscription Lamda Users should still be able to update the Credit Note Number Status to Cancelled.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(Credit_Note_Number__c))), 
NOT(ISNEW() ),
NOT(ISBLANK(Credit_Note_Number__c)),
NOT(
$Permission.Lambda_Integration_User)
)</errorConditionFormula>
    <errorMessage>Only Subscription Lamda Users are able to update Credit Note when Credit Note Number is populated.</errorMessage>
</ValidationRule>